--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <div id="navbar" class="navbar">
-            <div id="name">Muhammed Suhail P</div>
+            <div id="name">Muhammed Suhail </div>
             <button class="toggle-btn" onclick="toggleMenu()">☰</button>
             <div class="list" id="nav-links">
               <ul>
