--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="footer-section">
             <h3>Links</h3>
             <ul>
-              <li>➝ Home</li>
+              <li><a href="#home">➝ Home</a></li>
               <li>➝ About me</li>
               <li>➝ Skills</li>
               <li>➝ Projects</li>
