--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="hero">
             <h1 >
                 <span class="blink">Muhammed Suhail P</span><br>
-                <span class="blink" >MERN stack Developer</span>
+                <span class="blink" >Full stack Developer</span>
             </h1>
             
         </div>
